Fixed page title alignment issue

--- a/Code/app/styles/navigation.css
+++ b/Code/app/styles/navigation.css
@@ -139,3 +139,9 @@
     padding: .25em;
     color: #fff!important;
 }
+
+.navbar-brand .text {
+    position: relative;
+    top: -10px;
+    left: 10px;
+}
